--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
        </nav>
    </header> 
    <section id="sec_banner">
+       <h2>배너영역</h2>
        <div id="banner_wrap">
            <ul id="banner">
-                <li class="topImg"></li>
-                <li><a hfef="#"> </a></li>
-                <li><a hfef="#"> </a></li>
+                <li class="topImg"><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
            </ul>
            <div class="search_wrap">
                 <div class="search">
@@ -86,7 +87,7 @@
    <div id="search_bg"><!--검색창-->
     <div id="search_header">
         <div id="closedBtn"><img src="./images/closeBtn.png" alt="닫기"/></div>
-        <form action="" method="get" action="">
+        <form method="get">
             <input type="text" autocomplete="off" placeholder="여행지, 상품을 검색해보세요" maxlength="10" name="search" />
             <img src="./images/search2.png" alt="search" />
         </form>
